z-index fixed, all 12 cards matched leads to screen-3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ section{
     margin: auto;
     content: center;
     text-align: center;
-    position: inherit;
+    position: absolute;
     cursor: pointer;
 
     z-index: 4;
@@ -92,17 +92,8 @@ section{
     padding: 2px 2px 2px;
     position: fixed;
 
-    font-size: 1.75em;
+    font-size: 1.70em;
     text-align: center;
-}
-
-.container{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    overflow: scroll;
-
-    background-color: antiquewhite;
 }
 
 .cards{
@@ -118,9 +109,32 @@ section{
     z-index: inherit;
 }
 
+.container{
+    width: 100%;
+    height: 100%;
+
+    margin: auto;
+    content: center;
+    align-content: center;
+    text-align: center;
+
+    display: block;
+    position: inherit;
+    cursor: pointer;
+
+    z-index: inherit;
+}
+
 #container-card{
-    top: 10%;
+    height: 90%;
+    width: 100%;
+    margin-top: 14%;
+
     z-index: 4;
+}
+
+#container-screen-2{
+    background-color: antiquewhite;
 }
 
 .cardSelected{
@@ -135,31 +149,20 @@ section{
 
 /*--------------------------------------------------screen3*/
 #screen-3{
-    z-index: 1;
-}
-
-.container{
-    width: 100%;
-    height: 100%;
-
-    display: block;
-    margin: auto;
-    content: center;
-
-    position: inherit;
-    cursor: pointer;
-    align-content: center;
-    text-align: center;
-
-    background-color: grey;
+    position: absolute;
+    z-index: 0 !important;
 }
 
 #container-end{
-    z-index: 1 !important;
+    height: 100%;
+    width: 100%;
+    background-color: grey;
+    z-index: 0 !important;
 }
 
 #button-try-again{
-    z-index: inherit;
+    font-size: 3rem;
+    margin-top: 5%;
 }
 
 
@@ -181,8 +184,8 @@ section{
 /*mobile screens - under 480px width*/
 @media screen and (max-width: 480px){
 .cards{
-    height: 110px;
-    width: 110px;
+    height: 100px;
+    width: 100px;
 }
 .cover-text{
     height: 65%;
@@ -193,8 +196,8 @@ section{
 /*very small mobile screens - under 320px width*/
 @media screen and (max-width: 320px){
 .cards{
-    height: 90px;
-    width: 90px;
+    height: 86px;
+    width: 86px;
 }
 .cover-text{
     height: 85%;
